2006-08-04  Stepan Kasal  <kasal@ucw.cz>

	* automake.in (dist_dirs, fill_dist_dirs): Remove.
	* lib/am/distdir.am (DISTDIRS): Remove.
	* tests/distdir.test, tests/pr2.test: Do not grep, use
	`make distdir' instead.

2006-08-04  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Conditionals): Split in two sections, "Usage"
	and "Portability", and add a third one, "Limits" to explain how
	conditional definitions inside multi-lines definitions can be
	handled.
	* automake.in (handle_options): Do not assume that
	AUTOMAKE_OPTIONS is defined in TRUE, but diagnose conditional
	definitions of AUTOMAKE_OPTIONS.
	Report from Bas Wijnen.
	* tests/amopt.test: New test.
	* tests/Makefile.am (TESTS): Add it.

	* aclocal.in (install_file): Cannot use /dev/null while diffing
	new files, because Tru64's diff do not handle /dev/null.  So
	create an empty destination file before running diff on a new
	file, and erase it afterward.  Fall back to using /dev/null only
	if we cannot create this file.
	Report and initial patch from Ralf Wildenhues.
	(unlink_tmp): New function.
	* test/acloca18.test: Make sure the empty file has been erased.

2006-08-04  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* automake.in (handle_LIBOBJS_or_ALLOCA): With subdir-objects,
	do not prefix `$(top_builddir)/' aka `./' to nonempty LIBOBJDIR,
	to help BSD Make find the files also in a VPATH build.
	Also return the same path, possibly prefixed, for correct
	depdir computation.
	* tests/pr401.test: Update to expose wrong depdir computation.
	Rewrite to not use the same file name for library object and
	main program.
	* tests/pr401b.test, tests/pr401c.test: Likewise.

2006-07-09  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/install-sh: Don't incorrectly claim that this implementation
	can install only one file at a time.
	(doit_exec): New var, for using 'exec' if possible, to save a process.
	(test_mode, intermediate_mode): Remove.
	(mode): Check for IFS or globbing characters in mode, since they might