@@ -270,6 +270,7 @@ implicit.test \
 include.test \
 include2.test \
 info.test \
+init.test \
 insh2.test \
 install2.test \
 installdir.test \
