@@ -1,0 +1,37 @@
+#! /bin/sh
+# Copyright (C) 2006  Free Software Foundation, Inc.
+#
+# This file is part of GNU Automake.
+#
+# GNU Automake is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2, or (at your option)
+# any later version.
+#
+# GNU Automake is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with Automake; see the file COPYING.  If not, write to
+# the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
+# Boston, MA 02110-1301, USA.
+
+# Make sure we give a sensible error message when neither AC_INIT nor
+# AM_INIT_AUTOMAKE are given arguments.
+
+. ./defs || exit 1
+
+set -e
+
+cat >configure.in <<END
+AC_INIT
+AM_INIT_AUTOMAKE
+END
+
+# The error message should mension AC_INIT, not AC_PACKAGE_VERSION.
+($ACLOCAL && $AUTOCONF) 2>stderr && exit 1
+cat stderr
+grep AC_PACKAGE_VERSION stderr && exit 1
+grep AC_INIT stderr
