@@ -1,3 +1,11 @@
+2006-08-04  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* m4/init.m4: Suggest fixing the call to AC_INIT when
+	AC_PACKAGE_NAME or AC_PACKAGE_VERSION is undefined.  This is for
+	newcomers who call AC_INIT and AM_INIT_AUTOMAKE without arguments.
+	* tests/init.test: New file.
+	* tests/Makefile.am (TESTS): Add it.
+
 2006-08-04  Stepan Kasal  <kasal@ucw.cz>
 
 	* automake.in (dist_dirs, fill_dist_dirs): Remove.
